--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
 body {
 background: #f9e933;
+8
 }
 header, main, footer {
 min-width: 855px;
+}
+header .container, main .container, footer .container {
+max-width: 855px;
+margin: auto;
 }
 header {
 background: white;
@@ -10,3 +15,4 @@ background: white;
 main {
 background: white;
 }
+
