--- a/style.css
+++ b/style.css
@@ -11,6 +11,15 @@ margin: auto;
 }
 header {
 background: white;
+overflow: auto;
+}
+header h1 {
+float: left;
+width: 570px;
+}
+header nav {
+float: right;
+width: 285px;
 }
 main {
 background: white;
