--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ margin: auto;
 header {
 background: white;
 overflow: auto;
+padding: 10px;
 }
 header h1 {
 float: left;
@@ -23,13 +24,17 @@ width: 285px;
 main {
 background: white;
 overflow: auto;
+padding: 20px;
 }
-main .left{
+main .left, footer .contact{
 float: left;
 width: 570px;
 }
-main .right{
+main .right, footer .sitemap{
 float: right;
 width: 285px;
+}
+footer {
+overflow: auto;
 }
 
