--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
 background: #f9e933;
+font-family: 'Droid sans';
 }
 header, main, footer {
 min-width: 855px;
@@ -7,6 +8,10 @@ min-width: 855px;
 header .container, main .container, footer .container {
 max-width: 855px;
 margin: auto;
+}
+h1, h2, h3, h4 {
+font-family: Ubuntu;
+font-size: 120%;
 }
 header {
 background: white;
