--- a/style.css
+++ b/style.css
@@ -1,45 +1,60 @@
 body {
-background: #f9e933;
-font-family: 'Droid sans';
+    background: #f9e933;
+    font-family: 'Droid sans';
+    font-size: 100%;
 }
 header, main, footer {
-min-width: 855px;
+    min-width: 855px;
 }
 header .container, main .container, footer .container {
-max-width: 855px;
-margin: auto;
+    max-width: 855px;
+    margin: auto;
 }
 h1, h2, h3, h4 {
-font-family: Ubuntu;
-font-size: 120%;
+    font-family: Ubuntu;
+    font-size: 120%;
+}
+h1 {
+    font-size: 200%;
 }
 header {
-background: white;
-overflow: auto;
-padding: 10px;
+    background: white;
+    overflow: auto;
+    padding: 10px;
+    font-size: 100%;
 }
 header h1 {
-float: left;
-width: 570px;
+    float: left;
+    width: 570px;
 }
 header nav {
-float: right;
-width: 285px;
+    float: right;
+    width: 285px;
 }
 main {
-background: white;
-overflow: auto;
-padding: 20px;
+    background: white;
+    overflow: auto;
+    padding: 20px;
+}
+main h2 {
+    font-size: 120%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+main h3 {
+    margin-top: 10px;
+    margin-bottom: 5px;
 }
 main .left, footer .contact{
-float: left;
-width: 570px;
+    float: left;
+    width: 570px;
 }
 main .right, footer .sitemap{
-float: right;
-width: 285px;
+    float: right;
+    width: 285px;
 }
 footer {
-overflow: auto;
+    overflow: auto;
 }
 
