Add margin, padding

--- a/style.css
+++ b/style.css
@@ -3,6 +3,15 @@ body {
     font-family: 'Droid sans';
     font-size: 100%;
 }
+a {
+    text-decoration: none;
+    color: red;
+}
+
+a:hover {
+    text-decoration: underline;
+    color: red;
+}
 header, main, footer {
     min-width: 855px;
 }
@@ -14,18 +23,18 @@ h1, h2, h3, h4 {
     font-family: Ubuntu;
     font-size: 120%;
 }
-h1 {
-    font-size: 200%;
-}
+
 header {
     background: white;
     overflow: auto;
     padding: 10px;
+    margin-bottom: 3px;
     font-size: 100%;
 }
 header h1 {
     float: left;
     width: 570px;
+    font-size: 200%;
 }
 header nav {
     float: right;
